--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "babel-plugin-istanbul": "^6.0.0",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.5.0",
-        "browser-sync": "^2.26.12",
+        "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "eslint": "^7.3.1",
@@ -66,9 +66,11 @@
         "awesome-mask": "^1.1.1",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
+        "chart.js": "^2.9.4",
         "dayjs": "^1.10.4",
         "es6-promise": "^4.2.8",
         "v-clipboard": "^2.2.3",
+        "vue-chartjs": "^3.5.1",
         "vue-fragment": "^1.5.1",
         "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
