--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "php-coveralls/php-coveralls": "~2.2.0",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "3.*",
-        "timacdonald/log-fake": "^1.9"
+        "timacdonald/log-fake": "^1.9",
+        "ext-simplexml": "*"
     },
     "config": {
         "optimize-autoloader": true,
