--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.5.0",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
+        "canvas": "^2.8.0",
         "cross-env": "^7.0",
         "eslint": "^7.3.1",
         "eslint-config-standard": "^14.1.1",
