--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.5.0",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.0.1",
+        "canvas": "^2.8.0",
         "cross-env": "^7.0",
         "eslint": "^7.3.1",
         "eslint-config-standard": "^14.1.1",
@@ -67,7 +68,6 @@
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^2.9.4",
-        "dayjs": "^1.10.4",
         "es6-promise": "^4.2.8",
         "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
