--- a/composer.json
+++ b/composer.json
@@ -8,35 +8,35 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3.0",
         "ext-json": "*",
-        "anlutro/l4-settings": "^0.11.3",
-        "bensampo/laravel-enum": "^2.0",
+        "anlutro/l4-settings": "^1.0.0",
+        "bensampo/laravel-enum": "^3.0.0",
         "directorytree/ldaprecord-laravel": "^v2.3.2",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "goldspecdigital/laravel-eloquent-uuid": "7.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "fruitcake/laravel-cors": "^2.0",
+        "goldspecdigital/laravel-eloquent-uuid": "^8.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "laravel-lang/lang": "~6.1",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.3",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "littleredbutton/bigbluebutton-api-php": "^4.0.0",
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
         "brainmaestro/composer-git-hooks": "^2.8",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "friendsofphp/php-cs-fixer": "2.*",
         "fzaninotto/faker": "^1.9.1",
         "laravel/homestead": "^10.8",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "php-coveralls/php-coveralls": "~2.2.0",
-        "phpunit/phpunit": "^8.5",
+        "nunomaduro/collision": "^5.0",
+        "php-coveralls/php-coveralls": "^2.3.0",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "3.*",
         "timacdonald/log-fake": "^1.9",
         "ext-simplexml": "*"
@@ -63,12 +63,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+          "App\\": "app/",
+          "Database\\Factories\\": "database/factories/",
+          "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
