--- a/composer.json
+++ b/composer.json
@@ -87,7 +87,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": "phpunit",
+        "test": "php artisan test --parallel",
         "post-install-cmd": "cghooks add --ignore-lock",
         "post-update-cmd": "cghooks update",
         "fix-cs": "php-cs-fixer fix --allow-risky=yes"
