--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
         "vue-cropperjs": "^4.2.0",
-        "vue-fragment": "^1.5.1",
+        "vue-frag": "^1.2.4",
         "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
