--- a/.env.example
+++ b/.env.example
@@ -81,6 +81,7 @@ PASSWORD_RESET_THROTTLE=60
 NEW_USER_PASSWORD_RESET_EXPIRE=60
 NEW_USER_PASSWORD_RESET_THROTTLE=60
 DEFAULT_TIMEZONE=UTC
+ROOM_TOKEN_EXPIRATION=-1
 
 # Enable axe accessibility check tools, only considered in development
 ENABLE_AXE=false
@@ -92,6 +93,8 @@ AUTH_LOG_LDAP_ROLES=false
 # Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
 GREENLIGHT_COMPATIBILITY=false
 GREENLIGHT_PATH=b
+
+MIX_FRONTEND_BASE_URL="${APP_URL}"
 
 # Enable statistical usage data of the servers and duration in days to keep data
 STATISTICS_SERVERS_ENABLED=false
