--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "littleredbutton/bigbluebutton-api-php": "^4.0.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+      "ext-curl": "*"
     },
     "require-dev": {
         "ext-simplexml": "*",
