--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "ci"
     ],
     "devDependencies": {
+        "@babel/core": "^7.16.0",
+        "@babel/eslint-parser": "^7.16.3",
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
         "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
         "@vue/test-utils": "^1.1.2",
         "axe-core": "^4.0.1",
@@ -28,7 +31,7 @@
         "browser-sync-webpack-plugin": "^2.0.1",
         "canvas": "^2.8.0",
         "cross-env": "^7.0",
-        "eslint": "^7.3.1",
+        "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-mocha": "^7.0.1",
