--- a/.env.example
+++ b/.env.example
@@ -108,10 +108,11 @@ STATISTICS_MEETINGS_RETENTION_PERIOD=30
 ATTENDANCE_ENABLED=false
 ATTENDANCE_RETENTION_PERIOD=30
 
-# Auto room delete settings
+# Enable auto room delete
+ROOM_AUTO_DELETE_ENABLED=true
 # Send email to owner if room was not used within the last x days
 ROOM_AUTO_DELETE_INACTIVE_PERIOD=365
 # Send email to owner if room was never used since x days of the creation
 ROOM_AUTO_DELETE_NEVER_USED_PERIOD=90
 # Days from sending the email to deleting the room
-ROOM_AUTO_DELETE_GRACE_PERIOD=14
+ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
