--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,4 +105,9 @@ jobs:
       with:
         name: ${{ runner.os }}-${{ matrix.php-versions }}-laravel.log
         path: storage/logs/laravel.log
-
+    - name: Upload npm logs
+      uses: actions/upload-artifact@v2
+      if: failure()
+      with:
+        name: npm-debug.log
+        path: /home/runner/.npm/_logs/*-debug.log
