--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "test": "cross-env NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
-        "lint": "node_modules/.bin/eslint --ext .js,.vue .",
-        "fix-cs": "node_modules/.bin/eslint --ext .js,.vue . --fix",
+        "lint": "eslint --ext .js,.vue .",
+        "fix-cs": "eslint --ext .js,.vue . --fix",
         "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
         "ci": "npm run lint && npm run cover"
     },
@@ -17,31 +17,31 @@
         "ci"
     ],
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@babel/eslint-parser": "^7.16.3",
-        "@babel/plugin-proposal-class-properties": "^7.16.0",
-        "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
-        "@vue/test-utils": "^1.1.2",
-        "axe-core": "^4.0.1",
+        "@babel/core": "^7.16.10",
+        "@babel/eslint-parser": "^7.16.5",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@intlify/eslint-plugin-vue-i18n": "^0.15.0",
+        "@vue/test-utils": "^1.3.0",
+        "axe-core": "^4.3.5",
         "axios": "^0.21.2",
-        "babel-plugin-istanbul": "^6.0.0",
+        "babel-plugin-istanbul": "^6.1.1",
         "babel-plugin-rewire": "^1.2.0",
-        "bootstrap": "^4.5.0",
-        "browser-sync": "^2.26.14",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "canvas": "^2.8.0",
-        "cross-env": "^7.0",
+        "bootstrap": "^4.6.1",
+        "browser-sync": "^2.27.7",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "canvas": "^2.9.0",
+        "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-mocha": "^7.0.1",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "expect": "^26.1.0",
-        "glob": "^7.1.6",
-        "jquery": "^3.2",
+        "eslint-plugin-promise": "^4.3.1",
+        "eslint-plugin-standard": "^4.1.0",
+        "eslint-plugin-vue": "^7.0.0",
+        "expect": "^26.6.2",
+        "glob": "^7.2.0",
+        "jquery": "^3.6.0",
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
         "laravel-mix": "^5.0.5",
@@ -53,14 +53,14 @@
         "nyc": "^15.1.0",
         "popper.js": "^1.12",
         "pre-commit": "^1.1.3",
-        "prettier": "^2.0.5",
+        "prettier": "^2.5.1",
         "resolve-url-loader": "^3.1.4",
-        "sass": "^1.20.1",
+        "sass": "^1.49.0",
         "sass-loader": "^8.0.0",
-        "sinon": "^9.0.2",
-        "vue": "^2.5.17",
-        "vue-axe": "^2.4.0",
-        "vue-template-compiler": "^2.6.10"
+        "sinon": "^9.2.4",
+        "vue": "^2.6.14",
+        "vue-axe": "^2.4.4",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
         "@simonwep/pickr": "^1.5.1",
@@ -74,8 +74,8 @@
         "v-clipboard": "^2.2.3",
         "vue-chartjs": "^3.5.1",
         "vue-cropperjs": "^4.2.0",
-        "vue-frag": "^1.2.4",
-        "vue-i18n": "^8.18.2",
+        "vue-frag": "^1.4.0",
+        "vue-i18n": "^8.26.8",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
         "vue-swatches": "^2.1.0",
