--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
     "env": {
-        "test": {
+        "testing": {
             "plugins": ["rewire", "istanbul", "@babel/plugin-proposal-class-properties"],
             "retainLines": true
         }
