--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run development -- --watch --watch-poll",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "cross-env NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
+        "production": "mix --production",
+        "test": "cross-env NODE_ENV=testing mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
         "lint": "eslint --ext .js,.vue .",
         "fix-cs": "eslint --ext .js,.vue . --fix",
-        "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
+        "cover": "cross-env NODE_ENV=testing nyc --reporter=lcov --reporter=text npm run test",
         "ci": "npm run lint && npm run cover"
     },
     "pre-commit": [
@@ -44,23 +44,25 @@
         "jquery": "^3.6.0",
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
-        "laravel-mix": "^5.0.5",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
-        "mocha": "^7.2.0",
-        "mochapack": "^2.0.2",
+        "mocha": "^9.0.0",
+        "mochapack": "^2.1.4",
         "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
         "nyc": "^15.1.0",
         "popper.js": "^1.12",
         "pre-commit": "^1.1.3",
         "prettier": "^2.5.1",
-        "resolve-url-loader": "^3.1.4",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.0",
         "sass-loader": "^8.0.0",
         "sinon": "^9.2.4",
         "vue": "^2.6.14",
         "vue-axe": "^2.4.4",
-        "vue-template-compiler": "^2.6.14"
+        "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.6.14",
+        "webpack": "^5.68.0"
     },
     "dependencies": {
         "@simonwep/pickr": "^1.5.1",
