--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
     "env": {
-        "testing": {
+        "test": {
+            "presets": [
+                [
+                    "@babel/preset-env"
+                ]
+            ],
             "plugins": ["rewire", "istanbul", "@babel/plugin-proposal-class-properties"],
             "retainLines": true
         }
