--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "prod": "npm run production",
         "production": "mix --production",
-        "test": "cross-env NODE_ENV=testing mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
+        "test": "jest",
         "lint": "eslint --ext .js,.vue .",
         "fix-cs": "eslint --ext .js,.vue . --fix",
-        "cover": "cross-env NODE_ENV=testing nyc --reporter=lcov --reporter=text npm run test",
+        "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
         "ci": "npm run lint && npm run cover"
     },
     "devDependencies": {
@@ -21,6 +21,7 @@
         "@vue/test-utils": "^1.3.0",
         "axe-core": "^4.3.5",
         "axios": "^0.21.2",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-plugin-istanbul": "^6.1.1",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.6.1",
@@ -38,6 +39,9 @@
         "eslint-plugin-vue": "^7.0.0",
         "expect": "^26.6.2",
         "glob": "^7.2.0",
+        "jest": "^28.1.2",
+        "jest-config": "^28.1.2",
+        "jest-transform-stub": "^2.0.0",
         "jquery": "^3.6.0",
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
@@ -57,6 +61,7 @@
         "sinon": "^9.2.4",
         "vue": "^2.6.14",
         "vue-axe": "^2.4.4",
+        "vue-jest": "^3.0.7",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.68.0"
@@ -78,6 +83,7 @@
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
         "vue-swatches": "^2.1.0",
+        "vue-test-utils": "^1.0.0-beta.11",
         "vuex": "^3.4.0"
     },
     "engines": {
