--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/plugin-proposal-class-properties": "^7.16.7",
         "@intlify/eslint-plugin-vue-i18n": "^0.15.0",
         "@vue/test-utils": "^1.3.0",
+        "@vue/vue2-jest": "^28.0.1",
         "axe-core": "^4.3.5",
         "axios": "^0.21.2",
         "babel-core": "^7.0.0-bridge.0",
@@ -47,7 +48,6 @@
         "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
         "popper.js": "^1.12",
-        "pre-commit": "^1.1.3",
         "prettier": "^2.5.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.0",
@@ -55,7 +55,6 @@
         "sinon": "^9.2.4",
         "vue": "^2.6.14",
         "vue-axe": "^2.4.4",
-        "vue-jest": "^3.0.7",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.68.0"
@@ -77,7 +76,6 @@
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
         "vue-swatches": "^2.1.0",
-        "vue-test-utils": "^1.0.0-beta.11",
         "vuex": "^3.4.0"
     },
     "engines": {
