--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
         "eslint-plugin-standard": "^4.1.0",
+        "eslint-plugin-vitest-globals": "^1.2.0",
         "eslint-plugin-vue": "^7.0.0",
         "glob": "^7.2.0",
         "happy-dom": "^7.7.0",
