--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,8 @@ jobs:
             - name: Execute frontend code style check via eslint
               run: npm run lint
             - name: Execute frontend tests
+              env:
+                LARAVEL_BYPASS_ENV_CHECK: 1
               run: npm run cover
             - name: Upload coverage
               uses: codecov/codecov-action@v3
