--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,16 @@
         "php": "^8.1",
         "ext-json": "*",
         "anlutro/l4-settings": "^1.0.0",
-        "bensampo/laravel-enum": "^5.3.1",
-        "directorytree/ldaprecord-laravel": "^v2.3.2",
-        "doctrine/dbal": "^2.10",
-        "goldspecdigital/laravel-eloquent-uuid": "^9.0",
+        "bensampo/laravel-enum": "^6.0",
+        "directorytree/ldaprecord-laravel": "^v2.7",
+        "doctrine/dbal": "^3.0",
+        "goldspecdigital/laravel-eloquent-uuid": "^10",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel-lang/lang": "~6.1",
-        "laravel/framework": "^9.0",
-        "laravel/sanctum": "^2.3",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^v3.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
+        "laravel/ui": "^4.0",
         "littleredbutton/bigbluebutton-api-php": "^4.2.0",
         "maatwebsite/excel": "^3.1",
       "ext-curl": "*"
@@ -25,15 +25,15 @@
     "require-dev": {
         "ext-simplexml": "*",
         "barryvdh/laravel-ide-helper": "^2.7",
-        "brianium/paratest": "^6.3",
-        "spatie/laravel-ignition": "^1.0",
+        "brianium/paratest": "^7.0",
+        "spatie/laravel-ignition": "^2.0",
         "friendsofphp/php-cs-fixer": "3.*",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.14",
         "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^6.1",
+        "nunomaduro/collision": "^7.0",
         "php-coveralls/php-coveralls": "^2.3.0",
-        "phpunit/phpunit": "^9.3.3",
+        "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "3.*",
         "timacdonald/log-fake": "^2.0.1"
     },
@@ -62,7 +62,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
