--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint-plugin-vitest-globals": "^1.3.1",
         "eslint-plugin-vue": "^9.10.0",
         "glob": "^7.2.0",
+        "jsdom": "^16.7.0",
         "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
         "moxios": "^0.4.0",
