--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,26 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
         "ext-json": "*",
         "anlutro/l4-settings": "^1.0.0",
         "bensampo/laravel-enum": "^6.0",
         "directorytree/ldaprecord-laravel": "^v2.7",
         "doctrine/dbal": "^3.0",
+        "firebase/php-jwt": "^6.4",
         "goldspecdigital/laravel-eloquent-uuid": "^10",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jumbojett/openid-connect-php": "^0.9.10",
         "laravel-lang/lang": "~6.1",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^v3.2",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
         "littleredbutton/bigbluebutton-api-php": "^4.2.0",
         "maatwebsite/excel": "^3.1",
-      "ext-curl": "*"
+        "socialiteproviders/keycloak": "^5.2",
+        "socialiteproviders/saml2": "^4.7"
     },
     "require-dev": {
         "ext-simplexml": "*",
