--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=false
 # API Server URL
 APP_URL=http://localhost
 
+CONTAINER_IMAGE=pilos/pilos:latest
+
 SESSION_LIFETIME=120
 
 # Log to docker logs
