--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.5",
-        "vite": "^4.5.0"
+        "vite": "^4.5.0",
+        "vitest": "^0.34.6"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
