--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
         "@tiptap/extension-underline": "^2.1.11",
         "@tiptap/starter-kit": "^2.1.11",
         "@tiptap/vue-3": "^2.1.12",
-        "@vue/compat": "^3.2.41",
         "bootstrap-vue": "^2.23.0",
         "chart.js": "^4.4.0",
         "chartjs-adapter-dayjs-4": "^1.0.4",
@@ -60,7 +59,8 @@
         "maska": "^2.1.10",
         "pinia": "^2.1.7",
         "ua-parser-js": "^1.0.37",
-        "vue": "^3.2.41",
+        "@vue/compat": "3.3.4",
+        "vue": "3.3.4",
         "vue-chartjs": "^5.2.0",
         "vue-cropperjs": "^5.0.0",
         "vue-i18n": "^9.0",
