--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.5",
         "vite": "^4.5.0",
-        "vitest": "^0.34.6"
+        "vitest": "^0.34.6",
+        "vue-axe": "^3.1.2"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.2",
