--- a/.env.example
+++ b/.env.example
@@ -74,7 +74,7 @@ SHIBBOLETH_ENABLED=false
 # Available languages for the language picker
 VITE_AVAILABLE_LOCALES=en,de,fr
 # Default language
-VITE_DEFAULT_LOCALE=en
+DEFAULT_LOCALE=en
 # Theme (resources/sass/theme/)
 VITE_THEME=default
 # Color of the room history chart
