--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
@@ -14,8 +15,8 @@
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
         "@pinia/testing": "^0.1.3",
         "@vitejs/plugin-vue2": "^2.3.1",
-        "@vitest/coverage-istanbul": "^0.34.6",
-        "@vitest/ui": "^0.34.7",
+        "@vitest/coverage-istanbul": "^1.1.0",
+        "@vitest/ui": "^1.1.0",
         "@vue/test-utils": "^1.3.6",
         "axe-core": "^4.8.3",
         "axios": "^1.6.2",
@@ -31,14 +32,14 @@
         "eslint-plugin-vitest-globals": "^1.4.0",
         "eslint-plugin-vue": "^9.19.2",
         "jsdom": "^23.0.1",
-        "laravel-vite-plugin": "^0.8.1",
+        "laravel-vite-plugin": "^1.0.0",
         "lodash": "^4.17.19",
         "mutationobserver-shim": "^0.3.7",
         "popper.js": "^1.12",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.5",
-        "vite": "^4.5.1",
-        "vitest": "^0.34.6",
+        "vite": "^5.0.0",
+        "vitest": "^1.1.0",
         "vue": "^2.7.14",
         "vue-axe": "^2.4.4",
         "vue-template-compiler": "^2.7.14"
