--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - '[0-9].x'
   pull_request:
 jobs:
   pilos-backend:
