--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -17,6 +17,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update \
     && mkdir -p /etc/apt/keyrings \
     && apt-get install -y gnupg gosu curl ca-certificates zip unzip pv libzip-dev git supervisor libcap2-bin libpng-dev python2 \
+    && apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb \
     && apt-get install -y nginx \
     && apt-get install -y default-mysql-client postgresql-client libpq-dev \
     && apt-get install -y libldap2-dev libxml2-dev libpq-dev \
