--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite --host",
         "build": "vite build",
@@ -8,7 +9,8 @@
         "test": "vitest run",
         "test:watch": "vitest watch",
         "test:ui": "vitest --ui",
-        "cover": "vitest run --coverage"
+        "cover": "vitest run --coverage",
+        "cypress:open": "cypress open"
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
@@ -22,6 +24,7 @@
         "axios-mock-adapter": "^1.22.0",
         "bootstrap": "^4.6.1",
         "canvas": "^2.10.2",
+        "cypress": "^13.6.1",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.29.1",
