--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
         "@tiptap/vue-2": "^2.1.13",
         "bootstrap-vue": "^2.15.0",
         "chart.js": "^4.4.1",
-        "chartjs-adapter-dayjs-4": "^1.0.4",
-        "dayjs": "^1.11.10",
+        "chartjs-adapter-date-fns": "^3.0.0",
+        "date-fns": "^3.0.6",
         "dompurify": "^3.0.6",
         "maska": "^2.1.10",
         "mitt": "^3.0.1",
